2008-01-25  Alexey Proskuryakov  <ap@webkit.org>

        <rdar://problem/5706788> http/tests/security/cross-frame-access-port-explicit-domain.html fails on Windows

        * platform/win/Skipped:

2008-01-25  Alexey Proskuryakov  <ap@webkit.org>

        http/tests/xmlhttprequest/readystatechange.html fails on buildbot.

        * platform/win/Skipped:

2008-01-24  Sam Weinig  <sam@webkit.org>

        Reviewed by Ada Chan.

        <rdar://5131975> DumpRenderTree doesn't support undo/redo

        * platform/win/Skipped: With undo/redo support enabled, we can now
        remove the undo tests from the Skipped list.

2008-01-24  Adam Roben  <aroben@apple.com>

        Test for Bug 16996: Crash in createFontCustomPlatformData when loading
        0-byte font via @font-face

        <http://bugs.webkit.org/show_bug.cgi?id=16996>

        Reviewed by Hyatt.

        * fast/loader/font-face-empty-expected.txt: Added.
        * fast/loader/font-face-empty.html: Added.

2008-01-24  Alexey Proskuryakov  <ap@webkit.org>

        http://bugs.webkit.org/show_bug.cgi?id=16993
        <rdar://problem/5704331> REGRESSION: Loading page leads to many unexpected redirections

        Rolled out r29590, which was not a correct fix for <rdar://problem/5692566>.

        * fast/dom/Window/window-property-shadowing_-expected.txt: Removed.
        * fast/dom/Window/window-property-shadowing_.html: Removed.
        * platform/win/Skipped:

2008-01-23  Antti Koivisto  <antti@apple.com>

        Reviewed by Adam.
        
        Test that playback can be resumed by seeking backwards after a stall.

        * http/tests/media/video-play-stall-seek-expected.txt: Added.
        * http/tests/media/video-play-stall-seek.html: Added.
        * platform/win/Skipped:

2008-01-15  Michael Goddard  <michael.goddard@trolltech.com>

        Reviewed by Darin.

        Add a test for a crash encountered with -webkit-border-image.

        * fast/css/border-image-crash-expected.txt: Added.